Fixed gaps, queries and other comments

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,94 +1,77 @@
-.card{
-    width: 413px;
-    gap: 20px;
-    padding-bottom: 40px;
+.card {
+  width: 413px;
 }
 
 .card__content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card__image {
-    width: 413px;
-    height: 413px;
-    object-fit: cover;
-    display: block;
-    margin: 0;
-    border-radius: 8px;
+  width: 413px;
+  height: 413px;
+  object-fit: cover;
+  display: block;
+  margin: 0;
+  border-radius: 8px;
 }
 
-.card__title{
-    color: #212121;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    margin-top: 8px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 353; 
+.card__title {
+  color: #212121;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  margin: 8px 0 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-
 
 .card__like-btn {
-    background-image: url(../images/like-icon.svg);
-    width: 23px;
-    height: 20px;
-    border: none;
-    background-color: transparent;
-    opacity: 40%;
+  background-image: url(../images/like-icon.svg);
+  width: 23px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  opacity: 40%;
+  cursor: pointer;
 }
 
-@media  screen and (max-width: 627px) {
-    .card{
-        margin: 0 auto;
+.card__like-btn:hover{
+  opacity: 100%;
+}
 
-    }
+@media screen and (max-width: 627px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    width: 100%;
+    gap: 12px;
+  }
 
-   .card__image{
+  .card__image {
     max-width: 288px;
     height: 288px;
     display: flex;
-    align-items: center;
-   } 
+  }
 
-   .card__content{
-    font-size: 16px;
-    line-height: 1;
-    max-width: 288px;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-   }
-}
-
-@media screen and (min-width: 320px) and (max-width: 626px) {
-    .card{
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     margin: 0 auto; 
-     width: 100%;
-     height: 318px;
-     gap: 12px;
-    }
-
-   .card__image{
-     max-width: 288px;
-     height: 288px;
-     display: flex;
-     align-items: center;
-   } 
-   .card__content{
-    font-size: 16px;
-    line-height: 1;
+  .card__content {
     width: 288px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0;
     padding: 0;
-   }
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 1;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+  }
 }
