--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -5,23 +5,20 @@
 .cards__list {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0 40px;
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
-  justify-content: center;
   grid-gap: 40px 20px;
+  justify-content: center;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    row-gap:  20px;
     max-width: 288px;
-  }
-}
-
-@media screen and (min-width: 320px) and (max-width: 626px) {
-  .cards__list{
     margin: 0 auto;
-    padding: 0;
+    padding: 0 0 40px;
   }
 }
