--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,29 +5,29 @@
 }
 
 .profile__avatar{
-    margin-right: 20px;
-    border-radius: 8px;
-    height: 190px;
-    width: 190px;
+ margin-right: 20px;
+ border-radius: 8px;
+ height: 190px;
+ width: 190px;
 }
 
 .profile__column{
-    display: flex;
-    flex-direction: column;
+ display: flex;
+ flex-direction: column;
 }
 
 .profile__name{
-    max-width: 420px;
-    margin: 0 0 12px;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 32px;
-    line-height: 1;
-    color: #212121;
-    text-overflow: ellipsis;
-  overflow: hidden;
-  display: -webkit-box;
+ max-width: 420px;
+ margin: 0 0 12px;
+ font-family: Poppins, Arial, Helvetica, sans-serif;
+ font-weight: 500;
+ font-style: normal;
+ font-size: 32px;
+ line-height: 1;
+ color: #212121;
+ text-overflow: ellipsis;
+ overflow: hidden;
+ display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
@@ -50,83 +50,87 @@
 
 
 .profile__edit-btn{
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    margin-top: auto;
-    width: 115px;
-    height: 16px;
-    color: #212121;
-    font-weight: 500;
-    opacity: 70%;
-    border: none;
-    background-color: transparent;
-    font-size: 16px;
-    line height: 16px;
+ font-family: Poppins, Arial, Helvetica, sans-serif;
+ margin-top: auto;
+ width: 115px;
+ height: 16px;
+ color: #212121;
+ font-weight: 500;
+ opacity: 70%;
+ border: none;
+ background-color: transparent;
+ font-size: 16px;
+ line height: 16px;
+ cursor: pointer;
+}
+
+.profile__edit-btn:hover{
+ opacity: 100%;
 }
 
 .profile__add-btn{
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-    margin-left: auto;
-    margin-top: auto;
-    padding: 0;
-    border: none;
-    color:#FCF5E5;
-    background-color: #212121;
-    width: 155px;
-    height: 52px;
-    border-radius: 8px;
-    padding: 18px 32px;
-    font-size: 16px;
-    line-height: 16px;
+ font-family: Poppins, Arial, Helvetica, sans-serif;
+ margin-left: auto;
+ margin-top: auto;
+ padding: 0;
+ border: none;
+ color:#FCF5E5;
+ background-color: #212121;
+ width: 155px;
+ height: 52px;
+ border-radius: 8px;
+ padding: 18px 32px;
+ font-size: 16px;
+ line-height: 16px;
+ cursor: pointer;
+}
+
+.profile__add-btn:hover{
+ opacity: 80%;
 }
 
 .profile__icon{
-    width: 12px;
-    height: 12px;
-    gap: 8px;
+ width: 12px;
+ height: 12px;
+ gap: 8px;
 }
 
 @media screen and (max-width: 627px) {
-    .profile{
-        flex-direction: column;
-        max-width: 288px;
-        align-items: center;
-        text-align: center;
-        padding-top: 20px;
+   .profile{
+     flex-direction: column;
+     max-width: 288px;
+     align-items: center;
+     text-align: center;
+     padding-top: 20px;
     }
+
     .profile__avatar{
-        margin: 0 0 20px;
-        width: 80px;
-        height: 80px;
+     margin: 0 0 20px;
+     width: 80px;
+     height: 80px;
     }
 
     .profile__name{
-        font-size: 20px;
-        line-height: 1;
-        margin: 0 0 6px;
-        max-width: 288px;
+     font-size: 20px;
+     line-height: 1;
+     margin: 0 0 6px;
+     max-width: 288px;
     }
     .profile__add-btn{
-        margin: 0;
-        width: 100%;
+     margin: 0;
+     width: 100%;
     }
+
+    .profile__edit-btn{
+     margin: 0 auto;
+    }
+
     .profile__description{
-        margin: 0 0 32px;
-        max-width: 288px;
+     margin: 0 0 32px;
+     max-width: 288px;
     }
     .profile__column{
-        margin: 0 0 20px;
+     margin: 0 0 20px;
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 579px) {
-    .profile{
-        flex-direction: column;
-        max-width: 288px;
-        align-items: center;
-        text-align: center;
-        padding-top: 20px;
-    }
-    .profile__edit-btn{
-        margin: 0 auto;
-    }
-}
